[package]
name = "aion-event-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
aion-program = { path = "../../aion-program" }
aion-processor = { path = "../../aion-processor" }
aion-system = { path = "../../aion-system" }
aion-event = { path = "../../aion-event", optional = true }

[features]
default = ["blocking-processor", "non-blocking-processor"]
blocking-processor = []
non-blocking-processor = []